<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item
        android:id="@+id/statistics_navigation_menu_item"
        android:icon="@drawable/ic_statistics"
        android:title="@string/pref_settings" />-->
    <item android:id="@+id/alarm_menu"
        android:icon="@drawable/ic_statistics"
        android:title="@string/alarm"
        />
    <item android:id="@+id/list_incidentes_menu"
        android:icon="@drawable/ic_statistics"
        android:title="@string/list_incidentes"
        />
    <item android:id="@+id/load_incident_menu"
        android:icon="@drawable/ic_statistics"
        android:title="@string/load_incident_type"
        />
    <item android:id="@+id/list_tipo_incidente_menu"
        android:icon="@drawable/ic_statistics"
        android:title="@string/list_tipo_incidente"
        />
    <item android:id="@+id/load_create_menu"
        android:icon="@drawable/ic_statistics"
        android:title="@string/create"
        />
    <item android:id="@+id/configuration_menu"
        android:icon="@drawable/ic_statistics"
        android:title="@string/configuration"
        />
    <item android:id="@+id/sign_out_menu"
        android:icon="@drawable/ic_statistics"
        android:title="@string/sign_out"
        />
    <item android:id="@+id/show_map_menu"
        android:icon="@drawable/ic_statistics"
        android:title="@string/show_map"
        />
</menu>