<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_time"
        android:dependency="notifications_new_message"
        android:inputType="time"
        android:key="pref_time_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_time" />


    <!--<com.ecandle.example.sosmap.fragments.NumberPickerPreference-->
        <!--android:defaultValue="0"-->
        <!--android:dependency="notifications_new_message"-->
        <!--android:key="pref_hour_key"-->
        <!--android:title="@string/pref_title_hour" />-->

    <!--<com.ecandle.example.sosmap.fragments.NumberPickerPreference-->
        <!--android:defaultValue="0"-->
        <!--android:dependency="notifications_new_message"-->
        <!--android:key="pref_minute_key"-->
        <!--android:title="@string/pref_title_minute" />-->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked.-->

    <ListPreference
        android:defaultValue="3"
        android:dependency="notifications_new_message"
        android:entries="@array/pref_noti_frequency_titles"
        android:entryValues="@array/pref_noti_frequency_values"
        android:key="noti_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_noti_frequency" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />

</PreferenceScreen>
